syntax = "proto3";

package auth.v1;

option go_package = "github.com/diploma/api-gateway/api/proto/auth/v1;authv1";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  rpc Login(LoginRequest) returns (LoginResponse);
  
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
}

message RegisterRequest {
  string full_name = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
}

message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  string user_id = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string user_id = 1;
  bool is_valid = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message GetUserProfileRequest {
  string user_id = 1;
}

message GetUserProfileResponse {
  string user_id = 1;
  string full_name = 2;
  string email = 3;
  string phone = 4;
  string created_at = 5;
}

